# nested_argparse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: bumpversion.yml  publish.yml
src/nested_argparse/: __init__.py  nested_argparse.py
test/: test_multinesting.py  test_sanity_check.py
