[metadata]
name = nested_argparse
version = 0.1.0
author = Stephen Zhao
author_email = mail@zhaostephen.com
description = A python module that extends argparser to create nested namespace trees for subparsers.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
  argparse
  nested
  namespace
  subparser
  conflict
  parser
  cli
  command
  subcommand
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Utilities

[options]
packages = find:
package_dir =
  =src
python_requires = >=3.6

[options.packages.find]
where = src
